--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
 <!-- Facebook / WhatsApp Preview -->
 <meta property="og:title" content="Solar Sierra Leone">
 <meta property="og:description" content="Locally made solar panels, green jobs, and sustainable energy for Sierra Leone.">
-<meta property="og:image" content="solar-preview.jpg">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://your-website-link.com">
+<meta property="og:image" content="https://mangathpup.github.io/Solar-Sierra-Leone/solar-preview.jpg">
+<meta name="twitter:image" content="https://mangathpup.github.io/Solar-Sierra-Leone/solar-preview.jpg">
+<meta property="og:url" content="https://mangathpup.github.io/Solar-Sierra-Leone/">
+
 
 <!-- Twitter Card Preview -->
 <meta name="twitter:card" content="summary_large_image">
@@ -328,3 +329,4 @@
 
 </body>
 </html>
+
