--- a/index.html
+++ b/index.html
@@ -66,6 +66,19 @@
       padding: 1rem;
       margin-top: 2rem;
     }
+      a.pdf-btn {
+    display: inline-block;
+    padding: 0.75rem 1.25rem;
+    background: #ff9800;
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background 0.3s ease;
+  }
+  a.pdf-btn:hover {
+    background: #e68900;
+  }
   </style>
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="favicon.png">
@@ -323,10 +336,42 @@
   </div>
 </section>
 
+<section>
+  <h2>Download & Share</h2>
+
+  <!-- PDF Download -->
+  <a href="SolarSierra-Leone.pdf" download class="pdf-btn">
+    📄 Download Proposal (PDF)
+  </a>
+
+  <!-- Facebook Share -->
+  <a href="https://www.facebook.com/sharer/sharer.php?u=https://mangathpup.github.io/Solar-Sierra-Leone/" 
+     target="_blank" 
+     class="pdf-btn">
+    🔗 Share on Facebook
+  </a>
+
+  <!-- WhatsApp Share -->
+  <a href="https://api.whatsapp.com/send?text=Check%20out%20this%20plan%20for%20local%20solar%20panels%20in%20Sierra%20Leone:%20https://mangathpup.github.io/Solar-Sierra-Leone/" 
+     target="_blank" 
+     class="pdf-btn">
+    💬 Share on WhatsApp
+  </a>
+</section>
+
+  
+  
 <footer>
   <p>&copy; 2025 Solar Sierra Leone. All Rights Reserved.</p>
+    <p>&copy; 2025 Solar Sierra Leone</p>
+  <p>
+    <a href="https://www.facebook.com/profile.php?id=30229" target="_blank" rel="noopener noreferrer">
+      Follow the Chief Minister on Facebook
+    </a>
+  </p>
 </footer>
 
 </body>
 </html>
+
 
